Adding source files

--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,13 @@ npm-debug.log
 yarn-error.log
 
 
+
+###########
+## junk folders
+###########
+
+src/bkp/
+src/bkp 2/
 #################
 ## Images
 #################
